--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,8 +14,8 @@
 // ELEMENTS
 @import "./template/elements/title.scss";
 @import "./template/elements/text.scss";
-// @import "./template/elements/title-group.scss";
-// @import "./template/elements/buttons.scss";
+@import "./template/elements/title-group.scss";
+@import "./template/elements/buttons.scss";
 // @import "./template/elements/card.scss";
 // @import "./template/elements/list.scss";
 // @import "./template/elements/list-marked.scss";
@@ -24,7 +24,7 @@
 // @import "./template/elements/form-control.scss";
 
 // SECTIONS
-// @import "./template/sections/hero.scss";
+@import "./template/sections/hero.scss";
 // @import "./template/sections/statistic.scss";
 // @import "./template/sections/technology.scss";
 // @import "./template/sections/worldwide.scss";
