--- a/src/scss/template/base.scss
+++ b/src/scss/template/base.scss
@@ -35,3 +35,21 @@ main {
         padding-bottom: 100px;
     }
 }
+
+.color {
+    &--white {
+        color: $white;
+    }
+
+    &--black {
+        color:  $black;
+    }
+
+    &--dark-gray {
+        color: $dark-gray;
+    }
+
+    &--gray {
+        color: $gray;
+    }
+}
