--- a/src/scss/template/elements/title-group.scss
+++ b/src/scss/template/elements/title-group.scss
@@ -1,11 +1,9 @@
 .title-group {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 0 auto 40px;
-    max-width: 750px;
+    align-items: flex-start;
 
-    &.-full-width {
-        max-width: 100%;
+    &.title-group-center {
+        align-items: center;
     }
 }
