--- a/src/scss/template/elements/title.scss
+++ b/src/scss/template/elements/title.scss
@@ -1,38 +1,20 @@
 .title {
     &--extra-lg {
-        font-size: 90px;
-        font-weight: 550;
-        line-height: 100%;
+        font-size: 80px;
+        line-height: 110%;
+        font-weight: 400;
     }
 
     &--lg {
-        font-size: 80px;
-        font-weight: 550;
-        line-height: 100%;
-    }
-
-    &--md {
         font-size: 60px;
+        line-height: 110%;
         font-weight: 400;
-        line-height: 100%;
-    }
-
-    &--extra-md {
-        font-size: 40px;
-        font-weight: 400;
-        line-height: 100%;
     }
 
     &--sm {
-        font-size: 24px;
-        font-weight: 550;
-        line-height: 140%;
-    }
-
-    &--extra-sm {
-        font-size: 20px;
-        font-weight: 550;
-        line-height: 140%;
+        font-size: 40px;
+        line-height: 110%;
+        font-weight: 400;
     }
 
     &--white {
@@ -43,11 +25,8 @@
         color: $black;
     }
 
-    &--gradient {
-        background: linear-gradient(0.00deg, #344455, #22639e);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
+    &--gray {
+        color: $gray;
     }
 
     @media (max-width: 1320px) {
@@ -56,65 +35,31 @@
         }
 
         &--lg {
-            font-size: 60px;
-        }
-    
-        &--md {
             font-size: 50px;
-        }
-
-        &--extra-md {
-            font-size: 35px;
         }
     
         &--sm {
-            font-size: 20px;
+            font-size: 30px;
         }
     }
 
-    @media (max-width: 576px) {
+    @media (max-width: 768px) {
         &--extra-lg {
-            font-size: 60px;
-        }
-
-        &--lg {
-            font-size: 50px;
-        }
-    
-        &--md {
-            font-size: 40px;
-        }
-
-        &--extra-md {
-            font-size: 30px;
+            font-size: 54px;
         }
     }
 
     @media (max-width: 480px) {
         &--extra-lg {
-            font-size: 44px;
+            font-size: 40px;
         }
 
         &--lg {
             font-size: 40px;
         }
-    
-        &--md {
-            font-size: 30px;
-        }
 
-        &--extra-md {
+        &--sm {
             font-size: 24px;
-        }
-
-        &--extra-sm {
-            font-size: 16px;
-        }
-    }
-
-    @media (max-width: 360px) {
-        &--md {
-            font-size: 28px;
         }
     }
 }
