--- a/src/scss/template/header.scss
+++ b/src/scss/template/header.scss
@@ -32,28 +32,21 @@
     }
 
     .navbar-toggler {
-        background-color: $white;
-        width: 48px;
-        height: 48px;
-        border-radius: 15px;
-        align-items: flex-end;
+        background-color: $black;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 5px;
+        gap: 4px;
         box-shadow: none;
 
         span {
             height: 2px;
-            // background-color: $secondary;
-            border-radius: 2px;
-        }
-
-        span:nth-child(1), span:nth-child(3) {
-            width: 22px;
-        }
-
-        span:nth-child(2) {
-            width: 15px;
+            width: 20px;
+            background-color: $white;
+            border-radius: 1px;
         }
 
         @media (max-width: 990px) {
