--- a/src/scss/template/elements/title.scss
+++ b/src/scss/template/elements/title.scss
@@ -3,18 +3,21 @@
         font-size: 80px;
         line-height: 110%;
         font-weight: 400;
+        letter-spacing: -2px;
     }
 
     &--lg {
         font-size: 60px;
         line-height: 110%;
         font-weight: 400;
+        letter-spacing: -2px;
     }
 
     &--sm {
         font-size: 40px;
         line-height: 110%;
         font-weight: 400;
+        letter-spacing: -2px;
     }
 
     &--white {
