--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,7 @@
 @import "./template/elements/text.scss";
 @import "./template/elements/title-group.scss";
 @import "./template/elements/buttons.scss";
-// @import "./template/elements/card.scss";
+@import "./template/elements/card.scss";
 // @import "./template/elements/list.scss";
 // @import "./template/elements/list-marked.scss";
 // @import "./template/elements/custom-table.scss";
