--- a/src/scss/template/elements/title-group.scss
+++ b/src/scss/template/elements/title-group.scss
@@ -3,7 +3,20 @@
     flex-direction: column;
     align-items: flex-start;
 
-    &.title-group-center {
-        align-items: center;
+    &__wrapper {
+        display: flex;
+        margin-bottom: 50px;
+
+        &.-responsive {
+            flex-direction: row;
+            align-items: flex-end;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+    }
+
+    .title + .text {
+        margin-top: 20px;
     }
 }
