--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -1,4 +1,4 @@
-.hero {
+.section.hero {
     padding-top: 110px;
     padding-bottom: 0;
 
@@ -12,6 +12,8 @@
         margin-bottom: 260px;
 
         .title-group {
+            margin-bottom: 0;
+
             .title {
                 margin-bottom: 30px;
             }
