--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@
 @import "./template/elements/title-group.scss";
 @import "./template/elements/buttons.scss";
 @import "./template/elements/card.scss";
+@import "./template/elements/card-big.scss";
 // @import "./template/elements/list.scss";
 // @import "./template/elements/list-marked.scss";
 // @import "./template/elements/custom-table.scss";
