--- a/src/scss/template/base.scss
+++ b/src/scss/template/base.scss
@@ -49,7 +49,15 @@ main {
         color: $dark-gray;
     }
 
+    &--light-gray {
+        color: $light-gray;
+    }
+
     &--gray {
         color: $gray;
+    }
+
+    &--orange {
+        color: $orange;
     }
 }
