--- a/src/scss/template/elements/title-group.scss
+++ b/src/scss/template/elements/title-group.scss
@@ -14,6 +14,10 @@
             flex-wrap: wrap;
             gap: 20px;
         }
+
+        &.-centered {
+            justify-content: center;
+        }
     }
 
     .title + .text {
