--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -1,4 +1,4 @@
-.section.hero {
+.hero {
     padding-top: 110px;
     padding-bottom: 0;
 
@@ -24,11 +24,25 @@
         }
     }
 
-    // &.trading-hero {
-    //     background-image: url(/images/hero/tradings-hero-bg.png);
-    //     background-repeat: no-repeat;
-    //     background-position: calc(50% + 300px) bottom;
-    // }
+    &-variables {
+        position: absolute;
+        bottom: -100px;
+        left: 0;
+        right: 0;
+        padding: 70px 50px;
+        background-color: $white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border: 2px solid $border-light-gray;
+        border-radius: 30px;
+
+        &__item {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
 
     @media (max-width: 1320px) {
         &.main-hero {
@@ -48,6 +62,10 @@
             background-position: center bottom;
             background-size: 820px;
         }
+
+        &-variables {
+            padding: 50px 30px;
+        }
     }
 
     @media (max-width: 768px) {
@@ -58,9 +76,28 @@
             background-position: center bottom;
             background-size: 480px;
         }
+
+        &-variables {
+            padding: 50px 30px;
+            flex-wrap: wrap;
+            gap: 20px;
+
+            &__item {
+                width: calc(50% - 20px);
+            }
+        }
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 360px) {
+        &-variables {
+            padding: 50px 30px;
+            flex-wrap: wrap;
+            gap: 10px;
+            bottom: -200px;
 
+            &__item {
+                width: 100%;
+            }
+        }
     }
 }
