--- a/src/scss/template/elements/text.scss
+++ b/src/scss/template/elements/text.scss
@@ -1,4 +1,10 @@
 .text {
+    &--extra-lg {
+        font-size: 36px;
+        line-height: 110%;
+        font-weight: 400;
+    }
+
     &--lg {
         font-size: 24px;
         line-height: 140%;
