--- a/src/scss/template/elements/card.scss
+++ b/src/scss/template/elements/card.scss
@@ -17,6 +17,32 @@
         position: relative;
     }
 
+    &__preview {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 100%;
+
+        &__image {
+            height: 130px;
+            background-color: $orange;
+            border-radius: 20px;
+            width: 100%;
+    
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &__content {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+    }
+
     &--lg {
         gap: 20px;
 
@@ -58,7 +84,8 @@
     &--black {
         background: radial-gradient(circle at 100% 93%, rgba(0, 35, 41, .3) 0%, $white 70%, $white 100%);
 
-        .card--icon, .card--index {
+        .card--icon,
+        .card--index {
             background-color: $black;
         }
     }
@@ -66,7 +93,8 @@
     &--orange {
         background: radial-gradient(circle at 100% 93%, rgba(227, 87, 40, .3) 0%, $white 70%, $white 100%);
 
-        .card--icon, .card--index {
+        .card--icon,
+        .card--index {
             background-color: $orange;
         }
     }
@@ -74,7 +102,8 @@
     &--blue {
         background: radial-gradient(circle at 100% 93%, rgba(14, 199, 231, .3) 0%, $white 70%, $white 100%);
 
-        .card--icon, .card--index {
+        .card--icon,
+        .card--index {
             background-color: $blue;
         }
     }
@@ -89,7 +118,7 @@
 
         &--lg {
             gap: 20px;
-    
+
             .card--title {
                 margin-bottom: 35px;
             }
