--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -2,33 +2,11 @@
     padding-top: 110px;
     padding-bottom: 0;
 
-    &.main-hero {
-        background-color: $black;
-        background-image: url('/images/hero/main-hero-bg.png');
-        background-repeat: no-repeat;
-        background-position: calc(50% + 400px) bottom;
-        padding-top: 210px;
-        padding-bottom: 268px;
-        margin-bottom: 260px;
-
-        .title-group {
-            margin-bottom: 0;
-
-            .title {
-                margin-bottom: 30px;
-            }
-
-            .text {
-                margin-bottom: 30px;
-            }
-        }
-    }
-
     &-variables {
         position: absolute;
         bottom: -100px;
-        left: 0;
-        right: 0;
+        left: 12px;
+        right: 12px;
         padding: 70px 50px;
         background-color: $white;
         display: flex;
@@ -36,6 +14,7 @@
         justify-content: space-between;
         border: 2px solid $border-light-gray;
         border-radius: 30px;
+        width: calc(100% - 24px);
 
         &__item {
             display: flex;
@@ -44,53 +23,165 @@
         }
     }
 
+    .title-group {
+        margin-bottom: 0;
+
+        .title {
+            font-size: 70px;
+            line-height: 110%;
+            font-weight: 400;
+            letter-spacing: -2px;
+        }
+
+        .subtitle {
+            font-size: 20px;
+            line-height: 120%;
+            font-weight: 400;
+        }
+
+        .text {
+            font-size: 20px;
+            line-height: 120%;
+            font-weight: 400;
+            margin-top: 20px;
+        }
+
+        .btn {
+            margin-top: 20px;
+        }
+    }
+
+    &.main-hero {
+        background-color: $black;
+        background-image: url('/images/hero/main-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 400px) bottom;
+        padding-top: 210px;
+        padding-bottom: 268px;
+        margin-bottom: 110px;
+
+        .title-group {
+            .text {
+                margin-top: 30px;
+            }
+
+            .btn {
+                margin-top: 30px;
+            }
+        }
+    }
+
+    &.trading-hero {
+        background-color: $black;
+        background-image: url(/images/hero/tradings-hero-bg.png);
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 110px;
+        padding-bottom: 110px;
+    }
+
     @media (max-width: 1320px) {
         &.main-hero {
             padding-top: 140px;
             padding-bottom: 140px;
-            margin-bottom: 320px;
+            margin-bottom: 170px;
             background-position: calc(50% + 300px) bottom;
             background-size: 870px;
+        }
+
+        &.trading-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
         }
     }
 
     @media (max-width: 991px) {
+        &-variables {
+            padding: 50px 30px;
+        }
+
         &.main-hero {
             padding-top: 90px;
             padding-bottom: 490px;
-            margin-bottom: 270px;
+            margin-bottom: 120px;
             background-position: center bottom;
             background-size: 820px;
         }
 
-        &-variables {
-            padding: 50px 30px;
+        &.trading-hero {
+            background-image: url(/images/hero/tradings-hero-bg-mobile.png);
+            background-position: right bottom;
+            background-size: 770px;
+            padding-top: 80px;
+            padding-bottom: 420px;
         }
     }
 
     @media (max-width: 768px) {
+        .title-group {
+            .title {
+                font-size: 55px;
+            }
+    
+            .subtitle {
+                font-size: 16px;
+            }
+    
+            .text {
+                font-size: 20px;
+            }
+        }
+
         &.main-hero {
             padding-top: 70px;
             padding-bottom: 330px;
-            margin-bottom: 320px;
+            margin-bottom: 200px;
             background-position: center bottom;
             background-size: 480px;
         }
 
+        &.trading-hero {
+            background-image: url(/images/hero/tradings-hero-bg-mobile.png);
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 240px;
+        }
+
         &-variables {
+            bottom: -200px;
             padding: 50px 30px;
             flex-wrap: wrap;
-            gap: 20px;
+            row-gap: 20px;
+            column-gap: 10px;
 
             &__item {
-                width: calc(50% - 20px);
+                width: calc(50% - 10px);
             }
+        }
+    }
+
+    @media (max-width: 480px) {
+        .title-group {
+            .title {
+                font-size: 40px;
+            }
+    
+            .text {
+                font-size: 16px;
+            }
+        }
+
+        &.trading-hero {
+            background-size: 400px;
         }
     }
 
     @media (max-width: 360px) {
         &-variables {
-            padding: 50px 30px;
+            padding: 30px 20px;
             flex-wrap: wrap;
             gap: 10px;
             bottom: -200px;
