--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,11 +23,12 @@
 @import "./template/elements/card-list.scss";
 @import "./template/elements/list.scss";
 @import "./template/elements/icon.scss";
+@import "./template/elements/bg-block.scss";
 // @import "./template/elements/list-marked.scss";
 // @import "./template/elements/custom-table.scss";
 // @import "./template/elements/card-info.scss";
 // @import "./template/elements/form-control.scss";
- 
+
 // SECTIONS
 @import "./template/sections/hero.scss";
 @import "./template/sections/banner.scss";
