--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -10,7 +10,7 @@ $blue: #0ec7e7; // rgb(14, 199, 231)
 $border-gray: #DADADA;
 $border-light-gray: #ECECEC;
 
-$back-gray: #F5F5F5;
+$back-gray: #f5f5f5;
 $back-light-gray: #ECECEC;
 
 $enable-shadows: true;
