--- a/src/scss/template/base.scss
+++ b/src/scss/template/base.scss
@@ -25,6 +25,10 @@ section {
     padding-top: 150px;
     padding-bottom: 150px;
 
+    &.black__bg {
+        background-color: $black;
+    }
+
     &.gray__bg {
         background-color: $back-gray;
     }
