--- a/src/scss/template/sections/banner.scss
+++ b/src/scss/template/sections/banner.scss
@@ -4,7 +4,16 @@
         border-radius: 40px;
     }
 
-    &__box {
+    .title-group {
+        max-width: 480px;
+        margin-bottom: 20px;
+
+        .text {
+            font-size: 20px;
+        }
+    }
+
+    &--orange {
         background-color: $orange;
         background-image: url('/images/banner/banner-bg.png');
         background-size: contain;
@@ -12,14 +21,12 @@
         background-position: right center;
     }
 
-    .title-group {
-        max-width: 480px;
-        margin-bottom: 0;
-        margin-bottom: 20px;
-
-        .text {
-            font-size: 20px;
-        }
+    &--black {
+        background-color: $black;
+        background-image: url('/images/banner/banner-2-bg.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right bottom;
     }
 
     @media (max-width: 1320px) {
@@ -33,26 +40,41 @@
     }
 
     @media (max-width: 991px) {
-        &__box {
+        &--orange {
             padding: 60px 50px;
+        }
+
+        &--black {
+            background-size: 400px;
+            padding: 60px 50px 430px 50px;
+
+            .title-group {
+                max-width: 100%;
+                margin-bottom: 20px;
+            }
         }
     }
 
     @media (max-width: 768px) {
-        &__box {
-            padding: 40px 25px 90px 25px;
-        }
-
         .title-group {
             max-width: 100%;
         }
 
         &__box {
-            background-color: $orange;
-            background-image: url('/images/banner/banner-bg-mobile.png');
             background-size: 227px;
             background-repeat: no-repeat;
             background-position: right bottom;
+        }
+
+        &--orange {
+            background-color: $orange;
+            background-image: url('/images/banner/banner-bg-mobile.png');
+            padding: 40px 25px 90px 25px;
+        }
+
+        &--black {
+            background-size: 300px;
+            padding: 40px 25px 330px 25px;
         }
     }
 
@@ -62,9 +84,10 @@
                 font-size: 16px;
             }
         }
-    }
 
-    @media (max-width: 360px) {
-
+        &--black {
+            background-size: 210px;
+            padding-bottom: 240px;
+        }
     }
 }
