--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -81,6 +81,16 @@
         padding-bottom: 110px;
     }
 
+    &.forex-trading-hero {
+        background-color: $black;
+        background-image: url(/images/hero/forex-trading-hero-bg.png);
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 110px;
+        padding-bottom: 110px;
+    }
+    
     @media (max-width: 1320px) {
         &.main-hero {
             padding-top: 140px;
@@ -115,6 +125,14 @@
             background-image: url(/images/hero/tradings-hero-bg-mobile.png);
             background-position: right bottom;
             background-size: 770px;
+            padding-top: 80px;
+            padding-bottom: 420px;
+        }
+
+        &.forex-trading-hero {
+            background-image: url(/images/hero/forex-trading-hero-bg-mobile.png);
+            background-position: center bottom;
+            background-size: 600px;
             padding-top: 80px;
             padding-bottom: 420px;
         }
