add trading pages

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,7 +24,7 @@
 @import "./template/elements/list.scss";
 @import "./template/elements/icon.scss";
 @import "./template/elements/bg-block.scss";
-// @import "./template/elements/list-marked.scss";
+@import "./template/elements/list-marked.scss";
 // @import "./template/elements/custom-table.scss";
 // @import "./template/elements/card-info.scss";
 // @import "./template/elements/form-control.scss";
@@ -35,6 +35,7 @@
 @import "./template/sections/chooses.scss";
 @import "./template/sections/partner.scss";
 @import "./template/sections/account-types.scss";
+@import "./template/sections/shares.scss";
 
 // @import "./template/sections/statistic.scss";
 // @import "./template/sections/technology.scss";
