--- a/src/scss/template/sections/partner.scss
+++ b/src/scss/template/sections/partner.scss
@@ -39,13 +39,23 @@
 
                 &--icon {
                     flex-shrink: 0;
-                    width: 40px;
-                    height: 40px;
                     border-radius: 50%;
-                    background-color: $orange;
                     display: flex;
                     align-items: center;
                     justify-content: center;
+
+                    &.-orange {
+                        background-color: $orange;
+                    }
+
+                    &.-lg {
+                        width: 50px;
+                        height: 50px;
+                    }
+                    &.-md {
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
 
