--- a/src/scss/template/elements/buttons.scss
+++ b/src/scss/template/elements/buttons.scss
@@ -50,41 +50,23 @@
         }
     }
 
-    // &.btn-outline {
-    //     box-shadow: none;
-    //     background: transparent;
-    //     color: $text-white;
-    //     border-color: $text-white;
-    //     border-width: 1px;
+    &.btn--outline {
+        background-color: $black;
+        color: $orange;
+        border: 1px solid $border-gray;
 
-    //     &:hover {
-    //         background: $text-dark-blue;
-    //         color: $text-white;
-    //         border-color: $text-dark-blue;
-    //     }
-    // }   
+        &:hover {
+            &::before {
+                background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20.6378 31.3633L30.6378 21.3633' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M31.3622 29.8291V20.6367H22.1699' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+            }
+        }
 
-    // &.btn-info {
-    //     box-shadow: none;
-    //     background: $text-white;
-    //     color: $text-dark-blue;
+        &::before {
+            background-color: transparent;
+            background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20.6378 31.3633L30.6378 21.3633' stroke='%23E35728' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M31.3622 29.8291V20.6367H22.1699' stroke='%23E35728' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 
-    //     &:hover {
-    //         background: $text-dark-blue;
-    //         color: $text-white;
-    //     }
-    // }
-
-    // &.btn--blue {
-    //     box-shadow: none;
-    //     background: $primary;
-    //     color: $text-white;
-
-    //     &:hover {
-    //         background: $text-white;
-    //         color: $text-dark-blue;
-    //     }
-    // }
+        }
+    }   
 
     &:active {
         box-shadow: none !important;
