--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -50,7 +50,9 @@ $spacers: (
   15px: 15px,
   20px: 20px,
   30px: 30px,
-  40px: 40px
+  40px: 40px,
+  50px: 50px,
+  60px: 60px
 );
 $gutters: (
   0: 0,
