--- a/src/scss/template/elements/custom-table.scss
+++ b/src/scss/template/elements/custom-table.scss
@@ -1,181 +1,181 @@
-.custom-table {
-    display: flex;
-    justify-content: space-between;
-    background: radial-gradient(163.47% 224.77% at 50% 0%, #FFFFFF 17.44%, #BDE7FF 100%);
-    padding: 25px;
-    border-radius: 30px;
-    border: 1px solid #dbe8ee;
+// .custom-table {
+//     display: flex;
+//     justify-content: space-between;
+//     background: radial-gradient(163.47% 224.77% at 50% 0%, #FFFFFF 17.44%, #BDE7FF 100%);
+//     padding: 25px;
+//     border-radius: 30px;
+//     border: 1px solid #dbe8ee;
 
-    ul {
-        li {
-            .table-badge {
-                font-size: 12px;
-                line-height: 14px;
-                font-weight: 500;
-                color: var(--bt-primary, #fff);
-                border-radius: 15px;
-                padding: 5px 10px;
-                border: 1px solid #C270F8;
-            }
-        }
-    }
+//     ul {
+//         li {
+//             .table-badge {
+//                 font-size: 12px;
+//                 line-height: 14px;
+//                 font-weight: 500;
+//                 color: var(--bt-primary, #fff);
+//                 border-radius: 15px;
+//                 padding: 5px 10px;
+//                 border: 1px solid #C270F8;
+//             }
+//         }
+//     }
 
-    &__desc {
-        min-width: 346px;
-        display: flex;
-        flex-direction: column;
+//     &__desc {
+//         min-width: 346px;
+//         display: flex;
+//         flex-direction: column;
 
-        li {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 10px;
-            height: 70px;
-            border-top-left-radius: 15px;
-            border-bottom-left-radius: 15px;
-            padding-left: 20px;
-            cursor: pointer;
+//         li {
+//             display: flex;
+//             align-items: center;
+//             justify-content: flex-start;
+//             gap: 10px;
+//             height: 70px;
+//             border-top-left-radius: 15px;
+//             border-bottom-left-radius: 15px;
+//             padding-left: 20px;
+//             cursor: pointer;
 
-            img {
-                max-width: 66px;
-            }
+//             img {
+//                 max-width: 66px;
+//             }
 
-            &.-active {
-                background-color: $primary-hovered;
+//             &.-active {
+//                 background-color: $primary-hovered;
 
-                span {
-                    color: white;
-                }
-            }
-        }
-    }
+//                 span {
+//                     color: white;
+//                 }
+//             }
+//         }
+//     }
 
-    &__types {
-        display: flex;
-        width: calc(100%);
-    }
+//     &__types {
+//         display: flex;
+//         width: calc(100%);
+//     }
 
-    &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        width: calc(100%);
+//     &__item {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         text-align: center;
+//         width: calc(100%);
 
-        &--title {
-            height: 70px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            border-bottom: 1px solid #dbe8ee;
-            border-radius: 0 !important;
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-        }
+//         &--title {
+//             height: 70px;
+//             display: flex;
+//             align-items: center;
+//             justify-content: center;
+//             width: 100%;
+//             border-bottom: 1px solid #dbe8ee;
+//             border-radius: 0 !important;
+//             margin-bottom: 10px;
+//             padding-bottom: 10px;
+//         }
 
-        &--list {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            width: 100%;
+//         &--list {
+//             display: flex;
+//             flex-direction: column;
+//             align-items: center;
+//             text-align: center;
+//             width: 100%;
 
-            li {
-                width: 100%;
-                white-space: nowrap;
-                height: 70px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                column-gap: 10px;
-                cursor: pointer;
+//             li {
+//                 width: 100%;
+//                 white-space: nowrap;
+//                 height: 70px;
+//                 display: flex;
+//                 justify-content: center;
+//                 align-items: center;
+//                 column-gap: 10px;
+//                 cursor: pointer;
 
-                &.-active {
-                    background-color: $primary-hovered;
-                    color: white;
+//                 &.-active {
+//                     background-color: $primary-hovered;
+//                     color: white;
 
-                    .btn {
-                        background: $text-white;
-                        color: $text-dark-blue;  
-                    }
-                }
-            }
-        }
+//                     .btn {
+//                         background: $text-white;
+//                         color: $text-dark-blue;  
+//                     }
+//                 }
+//             }
+//         }
 
-        &:last-child {
-            ul {
-                li {
-                    border-top-right-radius: 15px;
-                    border-bottom-right-radius: 15px;
-                }
-            }
-        }
-    }
+//         &:last-child {
+//             ul {
+//                 li {
+//                     border-top-right-radius: 15px;
+//                     border-bottom-right-radius: 15px;
+//                 }
+//             }
+//         }
+//     }
 
-    @media (max-width: 1320px) {
-        &__desc {
-            min-width: 250px;
-        }
-    }
+//     @media (max-width: 1320px) {
+//         &__desc {
+//             min-width: 250px;
+//         }
+//     }
 
-    @media (max-width: 991px) {
-        padding: 20px;
+//     @media (max-width: 991px) {
+//         padding: 20px;
 
-        &__desc {
-            min-width: 190px;
+//         &__desc {
+//             min-width: 190px;
 
-            li {
-                flex-direction: column;
-                align-items: flex-start;
-                padding-left: 0;
-                height: 122px;
-                display: flex;
+//             li {
+//                 flex-direction: column;
+//                 align-items: flex-start;
+//                 padding-left: 0;
+//                 height: 122px;
+//                 display: flex;
               
-            }
-        }
+//             }
+//         }
 
-        &__item {
-            &--title {
-                height: 70px !important;
-                justify-content: center !important;
-            }
+//         &__item {
+//             &--title {
+//                 height: 70px !important;
+//                 justify-content: center !important;
+//             }
 
-            &--list {
-                li {
-                    height: 122px;
-                    white-space: inherit;
-                }
-            }
-        }
-    }
+//             &--list {
+//                 li {
+//                     height: 122px;
+//                     white-space: inherit;
+//                 }
+//             }
+//         }
+//     }
 
-    @media (max-width: 768px) {
-        &__desc {
-            li {
-                span {
-                    font-size: 16px !important;
-                }
-            }
-        }
+//     @media (max-width: 768px) {
+//         &__desc {
+//             li {
+//                 span {
+//                     font-size: 16px !important;
+//                 }
+//             }
+//         }
 
-        &__item {
-            &--title {
-                font-size: 16px !important;
-            }
+//         &__item {
+//             &--title {
+//                 font-size: 16px !important;
+//             }
 
-            &--list {
-                li {
-                    font-size: 16px !important;
-                }
-            }
-        }
+//             &--list {
+//                 li {
+//                     font-size: 16px !important;
+//                 }
+//             }
+//         }
 
-        &__types {
-            overflow-x: scroll;
-            scrollbar-width: none;
-            display: grid;
-            grid-template-columns: repeat(4, 120px);
-        }
-    }
-}
+//         &__types {
+//             overflow-x: scroll;
+//             scrollbar-width: none;
+//             display: grid;
+//             grid-template-columns: repeat(4, 120px);
+//         }
+//     }
+// }
