--- a/src/scss/template/elements/form-control.scss
+++ b/src/scss/template/elements/form-control.scss
@@ -1,50 +1,50 @@
-.form-control {
-    padding: 19px 25px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 140%;
-    border-radius: 30px;
-    background-color: #e9f1f5;
-    resize: none;
-    outline: none !important;
-    box-shadow: none !important;
-    border: 1px solid #dbe8ee !important;
+// .form-control {
+//     padding: 19px 25px;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 140%;
+//     border-radius: 30px;
+//     background-color: #e9f1f5;
+//     resize: none;
+//     outline: none !important;
+//     box-shadow: none !important;
+//     border: 1px solid #dbe8ee !important;
 
-    &:active, &:focus {
-        border: 1px solid #dbe8ee !important;
-        background-color: #e9f1f5;
-    }
+//     &:active, &:focus {
+//         border: 1px solid #dbe8ee !important;
+//         background-color: #e9f1f5;
+//     }
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
+//     &::-webkit-scrollbar {
+//         display: none;
+//     }
 
-    &-box {
-        display: block;	
-        position: relative;
-    }
+//     &-box {
+//         display: block;	
+//         position: relative;
+//     }
 
-    &-message {
-        display: none;
-        width: 100%; 
-        padding: 20px 25px;
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        font-size: 16px;
-        font-weight: 550;
-        line-height: 140%;
-        color: $text-gray;
-        cursor: text;
-        user-select: none;
+//     &-message {
+//         display: none;
+//         width: 100%; 
+//         padding: 20px 25px;
+//         position: absolute;
+//         left: 0;
+//         top: 0;
+//         bottom: 0;
+//         font-size: 16px;
+//         font-weight: 550;
+//         line-height: 140%;
+//         color: $text-gray;
+//         cursor: text;
+//         user-select: none;
 
-        span {
-            color: $text-dark-blue
-        }
-    }
-}
+//         span {
+//             color: $text-dark-blue
+//         }
+//     }
+// }
 
-.form-control-box .form-control:invalid + .form-control-message {
-	display: block;
-}
+// .form-control-box .form-control:invalid + .form-control-message {
+// 	display: block;
+// }
