--- a/src/scss/template/elements/title.scss
+++ b/src/scss/template/elements/title.scss
@@ -7,35 +7,35 @@
         font-size: 80px;
         line-height: 110%;
         font-weight: 400;
-        letter-spacing: -2px;
+        letter-spacing: -3px;
     }
 
     &--lg {
         font-size: 70px;
         line-height: 110%;
         font-weight: 400;
-        letter-spacing: -2px;
+        letter-spacing: -3px;
     }
 
     &--md {
         font-size: 60px;
         line-height: 110%;
         font-weight: 400;
-        letter-spacing: -2px;
+        letter-spacing: -3px;
     }
 
     &--sm {
         font-size: 50px;
         line-height: 110%;
         font-weight: 400;
-        letter-spacing: -2px;
+        letter-spacing: -3px;
     }
 
     &--extra-sm {
         font-size: 40px;
         line-height: 110%;
         font-weight: 400;
-        letter-spacing: -2px;
+        letter-spacing: -3px;
     }
 
     &--white {
@@ -59,10 +59,6 @@
             font-size: 50px;
         }
 
-        &--sm {
-
-        }
-    
         &--extra-sm {
             font-size: 30px;
         }
@@ -71,6 +67,23 @@
     @media (max-width: 991px) {
         &--extra-lg {
             font-size: 54px;
+            letter-spacing: -2px;
+        }
+
+        &--lg {
+            letter-spacing: -2px;
+        }
+
+        &--md {
+            letter-spacing: -2px;
+        }
+
+        &--sm {
+            letter-spacing: -2px;
+        }
+
+        &--extra-sm {
+            letter-spacing: -2px;
         }
     }
 
@@ -83,9 +96,7 @@
             font-size: 40px;
         }
 
-        &--sm {
-            
-        }
+        &--sm {}
 
         &--extra-sm {
             font-size: 24px;
